# IS26-ESP-Line-Tracing

./: CMakeLists.txt  README.md  functions.c  functions.h  main.c  roboDriver.c
IMUDriver/: CMakeLists.txt  IMUDriver.c  IMUDriver.h
IR/: IR_track.c  barcode.c (big size work)  barcodedigital.c  barcodedigitalver2.c
IR tack/: ir.c
IR/Library-fy version/: IR_track.h  decode_barcode.c
Main Core Drivers/IR/: CMakeLists.txt  barcode.c (Analog big size work)  barcodedigital.c  barcodedigitalver2.c  combinedir.c
Main Core Drivers/IR/Library-fy version/: IR_track.c  decode_barcode.h
Main Core Drivers/PIDDriver/: CMakeLists.txt  WithPID.c
Main Core Drivers/UltrasonicDriver/: README.txt  main.c
Main Core Drivers/motorDriver/: motorDriver.c
Main Core Drivers/mqtt_wifi/: CMakeLists.txt  functions.c  functions.h  main.c
Main Core Drivers/mqtt_wifi/lwipopts/: lwipopts.h
Main Core Drivers/servo/: main.c  readme.txt  servo_initial.elf.uf2  servo_v2.elf.uf2
Main Core Drivers/servo uss inegration/: CMakeLists.txt  Happy_USSxServo_v1.uf2  README.txt  main.c  servo.h  ultrasonic.c
Main Core Drivers/servo uss inegration/Libary-fied files/: CMakeLists.txt
PIDDriver/: WithPID.c
Partial Integration 1 (trying with MQTT)/: CMakeLists.txt  IMUDriver.c  README.txt  functions.c  functions.h  roboDriverV2.c
Partial Integration III/: CMakeLists.txt  README.txt  main.c  telemetry.h  wifi_telemetry_servo_uss.uf2
Partial Integration III with Motor/: CMakeLists.txt  Partial_Integration_III.uf2  WithPID.c  WithPID.h  main.c  telemetry.c  ultrasonic.c
UltrasonicDriver/: CMakeLists.txt  README.txt  USS_With_Kalman.uf2  USS_smooth-reading-no-kalman.uf2  initial_ultrasonic_interrupt_demo.uf2  kalman_filter.c  kalman_filter.h  main.c  ultrasonic_interrupt.c  ultrasonic_interrupt.h  ultrasonic_v2.uf2
Week 10 UF2s/: Demo 1 - NEW.uf2  Demo 1.uf2  Demo 2 [IRLineOnly - R Turns].uf2  Demo 2 [IRLineOnly].uf2  Demo_3.uf2  roboDriverV2 - Demo 1.uf2
barcode_with_telemetry/: barcodedigitalver2.c
lwipopts/: lwipopts.h
motorDriver/: CMakeLists.txt
mqtt_wifi/: functions.c  functions.h  main.c
roboDriverV2/: CMakeLists.txt  IMUDriver.c  IMUDriver.h  WithPID.c  WithPID.h  roboDriverV2.c  roboDriver_V2.h
roboDriverV3 - Demo 2/: CMakeLists.txt  IR_track.c  IR_track.h  WithPID.c  decode_barcode.c  decode_barcode.h  roboDriverV3.c  roboDriver_V3.h
servo/: CMakeLists.txt  main.c  perfect_servo.uf2  perfect_v2_servo.uf2  readme.txt  revamped_servo.uf2  servo.c  servo.h  should be no more change right servo.uf2
servo uss inegration/: CMakeLists.txt  README.txt  main.c  servo.c  servo.h  servo_uss_integration.uf2  ultrasonic.c  ultrasonic.h
servo uss inegration/Libary-fied files/: obstacle_scan_driver.c  obstacle_scan_driver.h
wheelEncoderDriver/: CMakeLists.txt  wheelEncoderDriver.c
